--- a/class24-inline-css/class24-inline-css.html
+++ b/class24-inline-css/class24-inline-css.html
@@ -10,13 +10,13 @@
 
 	<body>
 	
-		<h1>CSS Style (Cascading Style Sheets</h1>
+		<h1>CSS Style (Cascading Style Sheets)</h1>
 
-		<p>	
+		<p style="color: red; border: 1px solid blue">	
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed tristique sem. Ut tincidunt metus ut lobortis rutrum. Suspendisse sed odio condimentum, laoreet ligula nec, imperdiet ipsum. In porttitor ac ex id auctor. Duis non elit turpis. Ut blandit elementum blandit. In eget leo mauris. Sed dictum felis id magna varius malesuada. In laoreet gravida eros, sed placerat erat placerat ut. Nullam nec enim pulvinar, convallis lacus ut, porttitor eros.
 		</p>
 
-		<p>	
+		<p style="color: green; border: 1px solid black">	
 		In sed blandit orci. Donec eleifend purus sed rutrum auctor. Phasellus sed varius diam. Aliquam erat volutpat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin pellentesque, lorem ac hendrerit fringilla, arcu leo lacinia velit, at ullamcorper neque urna vitae nunc. Proin eget nisl in tortor lacinia feugiat.
 		</p>
 
@@ -26,4 +26,8 @@
 
 
 
-<!--  -->
+<!-- CSS is Cascading Style Sheets - Is used to apply styles in your HTML page -->
+
+<!-- You can apply with CSS as a external file - <link rel="stylesheet" type="text/css" href="css/style.css"> or inline with the attribute in the tag that you want to apply style-->
+
+<!-- To apply in line put style="Attribute1=value; "Attribute2=value;" in the tag and the attributes-->
