Colors and fonts in CSS

--- a/class30-borders-in-css/class30-borders-in-css.html
+++ b/class30-borders-in-css/class30-borders-in-css.html
@@ -40,6 +40,6 @@
 
 <!-- Another attributes: border-color, border-width, border-style -->
 
-<!-- The difference of make attributes in lines in css (border-color, border-style) is that you can change the style in clock reference, for the 4 sides Ex: border-color: red green yellow blue;
+<!-- The difference of make attributes in lines in css (border-color, border-style) is that you can change the style in clock reference, for the 4 sides Ex: border-color: red green yellow blue; -->
 
 <!-- To comment in css use /* comment */ -->
