--- a/class8-unordered-list-tag/class8-unordered-list-tag.html
+++ b/class8-unordered-list-tag/class8-unordered-list-tag.html
@@ -12,7 +12,7 @@
 
 		<h1>Products</h1>
 
-		<ul>
+		<ul type="disc">
 			<li>Notebook</li>
 			<li>Router</li>
 			<li>Video Game</li>
@@ -25,3 +25,5 @@
 
 
 <!-- Unordered List Tag - <ul> </ul> - This tag create a unordered list. To put the itens, you have to put the tag <li> </li> -->
+
+<!-- In Unordered list, we can put the type of the list - type="circle","disc","square" -->
