--- a/class9-ordered-list-tag/class9-ordered-list-tag.html
+++ b/class9-ordered-list-tag/class9-ordered-list-tag.html
@@ -12,7 +12,7 @@
 
 		<h1>Questions</h1>
 
-		<ol>
+		<ol type="A">
 			<li>Name</li>
 			<li>Age</li>
 			<li>Favorite Food</li>
@@ -25,3 +25,5 @@
 
 
 <!-- Ordered List Tag - <ol> </ol> - This tag create a unordered list. To put the itens, you have to put the tag <li> </li> -->
+
+<!-- In Ordered list, we can put the type of the list - type="1","A","a","I","i" -->
